--- a/activity5.html
+++ b/activity5.html
@@ -2,7 +2,7 @@
 <head>
 <title>Activity5</title>
 <body bgcolor="lightblue">
-<img src=".jpeg"alt="try_again"width="400" height="100" border="10"/>
+<img src="index.jpeg"alt="try_again"width="400" height="100" border="10"/>
 <a href="#last">down</a>
 <p name="pichai" style="color:lightpurple;font-size:100%;font-align:left;">Pichai worked in engineering and product management at Applied Materials and in management consulting at McKinsey & Company.[22] Pichai joined Google in 2004, where he led the product management and innovation efforts for a suite of Google's client software products, including Google Chrome[23] and Chrome OS, as well as being largely responsible for Google Drive. He went on to oversee the development of other applications such as Gmail and Google Maps.[24][25] On November 19, 2009, Pichai gave a demonstration of Chrome OS; the Chromebook was released for trial and testing in 2011, and released to the public in 2012.[26] On May 20, 2010, he announced the open-sourcing of the new video codec VP8 by Google and introduced the new video format, WebM.[27]On March 13, 2013, Pichai added Android to the list of Google products that he oversees. Android was formerly managed by Andy Rubin.[28] He was a director of Jive Software from April 2011 to July 30, 2013.[29][30][31] Pichai was selected to become the next CEO of Google on August 10, 2015[8] after previously being appointed Product Chief by CEO, Larry Page. On October 24, 2015 he stepped into the new position at the completion of the formation of Alphabet Inc., the new holding company for the Google company family.[9][31][32]
 </p><br /><br /><br /><br />
