--- a/activity11.html
+++ b/activity11.html
@@ -10,15 +10,17 @@
 <p align="left"><b>Ayesha syed Mohammad</b>
 <img src="/home/6CSE2/flower.jpeg" style="float:right;width:100px;height:90px;"></p>
 
-<p align="left"><a href="mailto:anushaahanifee@gmail.com">ayesha31ash@gmail.com</a></p>
+<p align="left"><a href="mailto:ayesha31ash@gmail.com">ayesha31ash@gmail.com</a></p>
 
 <p align="left">+91 9902089877</p>
 
 <hr style="margin-left: 40px;margin-right: 40px;margin-bottom: 1px;border-top: 1px solid;">
+  <p align="left"><b>CV Highlights</b></p>
 <ul type="disc">
-<li></li>
-
-<li>Looking forward to work in a challenging environment, where I can learn new things and contribute positively for the growth, development and prosperity of the organisation by comitted and dedicated work culture, which shall offer bright future</li>
+<li>python</li>
+<li>Copier Techno System</li>
+  <li>java</li>
+  <li>throwball player</li>
 
 </ul>
 
@@ -39,7 +41,8 @@
 <li>view all todos in each project and expand a single todo to see/edit it's details and also delete</li>
 
 <li>use local storage to save user's projects and todos between sessions</li>
-
+<li><b>Job Responsible</li>
+  <li>understand what are the clients needs</li>
 </ul>
 
 </ul>
