--- a/activity11.html
+++ b/activity11.html
@@ -175,15 +175,7 @@
 
 <ul type="circle">
 
-<li></li>
-
-<li></li>
-
-<li></li>
-
-<li></li>
-
-<li></li>
+<li>done internship at copier Techno system</li>
 
 </ul>
 
