--- a/activity11.html
+++ b/activity11.html
@@ -10,13 +10,16 @@
 <p align="left"><b>Ayesha syed Mohammad</b>
 <img src="/home/6CSE2/flower.jpeg" style="float:right;width:100px;height:90px;"></p>
 
-<p align="left"><a href="mailto:anushaahanifee@gmail.com">ayesha31ash@gmail.com</a></p>
+<p align="left"><a href="mailto:ayesha31ash@gmail.com">ayesha31ash@gmail.com</a></p>
 
 <p align="left">+91 9902089877</p>
 
 <hr style="margin-left: 40px;margin-right: 40px;margin-bottom: 1px;border-top: 1px solid;">
+  <p align="left"><b>CV Highlights</b></p>
 <ul type="disc">
-<li></li>
+<li>Copier Techno Systems</li>
+  <li>python</li>
+  <li>throwball Player</li>
 
 <li>Looking forward to work in a challenging environment, where I can learn new things and contribute positively for the growth, development and prosperity of the organisation by comitted and dedicated work culture, which shall offer bright future</li>
 
@@ -39,7 +42,10 @@
 <li>view all todos in each project and expand a single todo to see/edit it's details and also delete</li>
 
 <li>use local storage to save user's projects and todos between sessions</li>
+<p align="left">Job responsible</p>
 
+<ul type="circle">
+  <li>understand the needs of clients</li>
 </ul>
 
 </ul>
@@ -172,15 +178,8 @@
 
 <ul type="circle">
 
-<li></li>
+<li>Done internship at Copier Techno systems</li>
 
-<li></li>
-
-<li></li>
-
-<li></li>
-
-<li></li>
 
 </ul>
 
