--- a/activity11.html
+++ b/activity11.html
@@ -1,196 +1,97 @@
 <html>
-
 <head>
-
 <title>resume</title>
-
 </head>
 <body bgcolor=lightblue>
-
 <p align="left"><b>Ayesha syed Mohammad</b>
 <img src="/home/6CSE2/flower.jpeg" style="float:right;width:100px;height:90px;"></p>
-
 <p align="left"><a href="mailto:ayesha31ash@gmail.com">ayesha31ash@gmail.com</a></p>
-
 <p align="left">+91 9902089877</p>
-
 <hr style="margin-left: 40px;margin-right: 40px;margin-bottom: 1px;border-top: 1px solid;">
   <p align="left"><b>CV Highlights</b></p>
 <ul type="disc">
 <li>Copier Techno Systems</li>
-  <li>python</li>
+  <li> basic python,java,c\c++</li>
   <li>throwball Player</li>
-
-<li>Looking forward to work in a challenging environment, where I can learn new things and contribute positively for the growth, development and prosperity of the organisation by comitted and dedicated work culture, which shall offer bright future</li>
-
 </ul>
-
 <hr>
-
-
 <p align="left"><b>Professional Experience</b></p>
-
 <ul>
 <li><b>projects</li>
-
 <p align="left">JavaScript</p>
-
 <ul type="circle">
-
 <li>view all projects</li>
-
 <li>view all todos in each project and expand a single todo to see/edit it's details and also delete</li>
-
 <li>use local storage to save user's projects and todos between sessions</li>
 <p align="left">Job responsible</p>
-
 <ul type="circle">
   <li>understand the needs of clients</li>
 </ul>
-
 </ul>
-
 <hr>
-
 <p align="left"><b>Education Qualification</b></p><br />
-
-
 <table align="left" border="1">
-
 <tr>
-
 <th>
 <b>Qualification</b>
 </th>
-
 <th>
 <b>Board</b>
 </th>
-
 <th><b>Precentage/CGPA</b></th>
-
 <th><b>Year</b></th>
-
 </tr>
-
 <tr>
-
 <td>S.S.L.C</td>
-
 <td>C.B.S.E</td>
-
 <td>6.4</td>
-
 <td>2015</td>
-
 </tr>
-
-
 <tr>
-
 <td>PUC(Science Stream)</td>
-
 <td>State</td>
-
 <td>60</td>
-
 <td>2017</td>
-
 </tr>
-
-
-
 <tr>
-
 <td>B.Tech</td>
-
 <td>Presidency University</td>
-
 <td>results Awaited</td>
-
 <td>2021</td>
-
 </tr>
-
-
 </table>
-
 <br />
 <br />
-<br />
-<br />
-<br />
-<br />
-<br />
-
 <hr>
-
-
-
 <p align="left"><b>Independent Courses</b></p>
-
 <ul type="circle" align="left">
-
 <li>Python</li>
-
 <li>C/C++</li>
-
 <li>Java</li>
-
 </ul>
-
 <hr>
-
 <p align="left"><b>Certification/Awards:</b></p>
-
 <ul type="circle">
-
 <li>3rd place in throw ball game</li>
-
 <li></li>
-
-
-
 </ul>
-
 <hr>
-
 <p align="left"><b>Personal Information</b></p>
-
 <ul type="circle">
-
-<li></li>
-
-<li></li>
-
-<li></li>
-
-<li></li>
-
-<li></li>
-
+<li>Age:20</li>
+<li>DOB:31st March 1999</li>
+<li>Gender:Female</li>
+<li>Father Name:Syed Jawad</li>
+<li>Mother Name:Syed Nasreen</li>
+<li>Address:RT Nagar,Bangalore-560032
 </ul>
-
-
 <hr>
-
 <p align="left"><b>Other Information</b></p>
-
 <ul type="circle">
-
 <li>Done internship at Copier Techno systems</li>
-
-
 </ul>
-
-
 <hr>
-
 <p align="left"><b>Declaration</b></p>
-
-
-
-
 </body>
 
 </html>
