--- a/activity11.html
+++ b/activity11.html
@@ -62,6 +62,10 @@
 </table>
 <br />
 <br />
+<br />
+  <br />
+  <br />
+  <br />
 <hr>
 <p align="left"><b>Independent Courses</b></p>
 <ul type="circle" align="left">
@@ -88,10 +92,14 @@
 <hr>
 <p align="left"><b>Other Information</b></p>
 <ul type="circle">
-<li>Done internship at Copier Techno systems</li>
+<li>watching movies</li>
+  <li>reading novels,/li>
+  <li>playing video games</li>
 </ul>
 <hr>
 <p align="left"><b>Declaration</b></p>
+  <ul type="circle">
+    <li>I hereby declare the above information is true</li>
 </body>
 
 </html>
